--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "postcss": "^8.5.1",
     "react": "latest",
     "react-dom": "latest",
-    "tailwindcss": "^3.0.0"
+    "tailwindcss": "^3.0.0",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/dotenv": "^6.1.1",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "latest",
     "@types/react": "latest",
     "prisma": "^6.3.1",
