--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "dotenv": "^16.4.7",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
-    "next": "latest",
+    "next": "^15.1.6",
     "postcss": "^8.5.1",
-    "react": "latest",
-    "react-dom": "latest",
-    "tailwindcss": "^3.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^3.4.17",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
