--- a/package.json
+++ b/package.json
@@ -5,20 +5,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "prisma": "prisma"
+    "prisma": "prisma",
+    "build:css": "npx tailwindcss build src/styles/tailwind.css -o dist/styles.css"
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
-    "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.1.6",
-    "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.17",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
@@ -27,7 +25,11 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "latest",
     "@types/react": "latest",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
     "prisma": "^6.3.1",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-cli": "^0.1.2",
     "typescript": "latest"
   }
 }
