--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@prisma/client": "^6.3.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
+    "event-source-polyfill": "^1.0.31",
+    "eventsource-polyfill": "^0.9.6",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.1.6",
+    "pg": "^8.13.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
@@ -25,6 +30,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "latest",
+    "@types/pg": "^8.11.11",
     "@types/react": "latest",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
